# LFOKeys

./: .gitignore  CMakeLists.txt  README.md  WubDaddy.jucer
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: Engine.cpp  Engine.h  EnvelopeEditor.cpp  EnvelopeEditor.h  LFO.cpp  LFO.h  LookAndFeel.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SegmentGenerator.h  SystemMidiInputHandler.cpp  SystemMidiInputHandler.h  TempoSync.cpp  TempoSync.h  WavetableOscillator.cpp  WavetableOscillator.h
